--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -724,7 +724,7 @@ transient volatile HashEntry<K,V>[] table;
 对于读操作，获取key所在的Segment时，采用unsafe的volatile方法。
 
 ```java
-Segment<K,V> s = (Segment<K,V>)UNSAFE.getObjectVolatile(segments, u)
+Segment<K,V> s = (Segment<K,V>)UNSAFE.getObjectVolatile(segments, u);
 ```
 
 获取Segment的HashEntry也同理。
