--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -660,6 +660,16 @@ acquire和release都可能被阻塞，如果想要不被阻塞可使用boolean t
 
 ##### 轻量级锁
 
+JDK1.6引入轻量级锁，让锁拥有四个状态，无锁unlocked、偏向锁biasable、轻量级锁lightweight locked、重量级锁inflated，在MarkWord中标记。
+
+![](img/markedword.png)
+
+对于绝大部分锁，在整个同步周期内都是不存在竞争的，因此不需要都使用互斥量进行同步，可以先采用CAS操作进行同步，如果CAS失败了再采用互斥量。
+
+当尝试获取一个对象的锁时，如果锁对象标记处于01状态，此时虚拟机在当前线程中创建Lock Record，然后使用CAS操作将对象的Markword更新为Lock Word指针。如果CAS操作成功，那么当前线程就会获取该对象上的锁，并且对象的Mark Word更新为01.
+
+如果CAS失败，首先检查该对象的Mark Word是否指向当前线程的虚拟机栈，如果是，说明当前线程已经持有该对象的锁了，继续执行同步中的内容。否则说明该对象的锁被其他线程抢占，且轻量级锁不再有效，膨胀为重量级锁。
+
 ##### 偏向锁
 
 当第一个线程获取到锁对象后，再获取该锁就不需要进行同步操作，甚至不需要CAS操作。
@@ -736,3 +746,17 @@ Segment<K,V> s = (Segment<K,V>)UNSAFE.getObjectVolatile(segments, u);
 对于写操作，先获取key所在的Segment，如果获取成功，则像操作普通HashMap一样操作Segment。
 
 获取锁的方式并不是直接用lock，因为这种方式在获取不到的时候会挂起。采用的方式是自旋锁，如果获取失败，则循环再次尝试tryLock申请锁，retry超过一定数值时再用lock。如果自旋的过程中key对应的链表头被修改，则重置retry次数。（消耗cpu）
+
+### synchronized底层原理
+
+对象被创建在堆中，对象在内存中的布局可以分为三个区域：对象头，实例数据，对齐填充。
+
+对象头中包括运行时的数据（Mark Word）：锁状态标志、线程持有的锁、对象年龄等。
+
+![](img/QQ截图20190915230356.png)
+
+##### 宏观实现
+
+每一个实例都有一个Monitor对象，由C++实现，其中定义了—WaitSet、—EntryList,其中Waitset保存了等待锁的线程对象，—owner指向当前持有锁的线程，
+
+加锁：—waitset移出、—owner指向、—count+1
