--- a/数据库/数据库复习.md
+++ b/数据库/数据库复习.md
@@ -326,4 +326,6 @@ MySQL的读写分离：
 
 Insert/delete/update用master，select用slaves。Master挂了，找一个slaves代替master。
 
- 
+###  SQL语句执行流程
+
+FROM	ON	JOIN	WHERE	GROUP BY	SELECT	HAVING	ORDER BY	LIMIT
