--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -18,6 +18,22 @@
 
 **传输控制协议TCP** 是面向连接的，提供可靠交付，有流量控制、拥塞控制，提供全双工通信，面向字节流（对应用层的数据组织成大小不等的数据块），每一条TCP连接只能是点对点。
 
+### TCP与UDP的首部
+
+TCP的首部：
+
+![](img/tcphead.png)
+
+固定的20位，余下选项不固定。
+
+TCP流量控制通过连接的每一端声明窗口大小进行控制（接收缓冲区大小）,窗口大小以2字节表示，故窗口最大为65535字节。
+
+UCP的首部：
+
+![](img/udphead.png)
+
+8个字节，由于长度部分只有两个字节，所以数据部分最多只能有65535字节。
+
 ### HTTP1.0和HTTP1.1的区别
 
 HTTP1.1在1999年开始广泛应用
@@ -31,6 +47,16 @@ HTTP1.1在1999年开始广泛应用
 **4.Host头处理** 在HTTP1.0的时代认为每个服务器都绑定唯一一个IP地址，因此请求头中没有传递主机名。而随着虚拟主机技术的发展，每一台服务器上可以存在多个虚拟主机，共享一个IP地址。HTTP1.1的请求消息和响应消息都应该支持Host头域，且请求消息如果没有Host头域会报一个错误400。
 
 **5.长连接** HTTP1.1支持长连接和请求的流水线处理，在一个TCP连接上可以传递多个HTTP请求和响应，减少了建立和关闭连接的消耗和延迟。在HTTP1.1默认开启Connection：keep-alive，一定程度上弥补了HTTP1.0每次请求都要创建连接的缺点。
+
+##### HTTP2.0
+
+新的二进制格式
+
+多路复用
+
+header压缩
+
+服务端推送
 
 ### TCP的三次握手和四次挥手
 
