--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -419,7 +419,7 @@ service.shutDownNow();
 
 2. execute的提交没有返回值，而submit的提交会返回一个Future类型的对象
 
-3. execute提交的时候，如果有异常，就会直接抛出异常，而submit在遇到异常的时候，通常不会立马抛出异常，而是会将异常暂时存储起来，等待你调用Future.get()方法的时候，才会抛出异常
+3. execute提交的时候，如果有异常，就会直接抛出异常，而submit在遇到异常的时候，通常不会立马抛出异常，而是会将异常暂时存储起来，等待你调用Future.get()方法的时候，才会抛出异常。如果调用Fulture.get()，主线程会阻塞。
 
 ##### 内部实现
 
@@ -452,6 +452,18 @@ private final AtomicInteger ctl = new AtomicInteger(ctlOf(RUNNING, 0));
 - **STOP** ： 1 << COUNT_BITS，即高 3 位为 001，该状态的线程不会接收新任务，也不会处理阻塞队列中的任务，而且会中断正在运行的任务；
 - **TIDYING** ： 2 << COUNT_BITS，即高 3 位为 010，该状态表示线程池对线程进行整理优化；
 - **TERMINATED**： 3 << COUNT_BITS，即高 3 位为 011，该状态表示线程池停止工作；
+
+##### 创建线程池的方式：
+
+Executors.newSingleThreadExecutor();
+
+Executors.newFixedThreadPool(int nThreads);
+
+Executors.newCachedThreadPool();
+
+Execotors.newSingleThreadScheduledExecutor();
+
+Executors.newScheduledThreadPool();
 
 ### Lock实现原理
 
