--- a/数据库/数据库复习.md
+++ b/数据库/数据库复习.md
@@ -329,3 +329,70 @@ Insert/delete/update用master，select用slaves。Master挂了，找一个slaves
 ###  SQL语句执行流程
 
 FROM	ON	JOIN	WHERE	GROUP BY	SELECT	HAVING	ORDER BY	LIMIT
+
+### 分布式事务
+
+#### DTP模型
+
+Distributed Transaction Processing
+
+AP，应用程序
+
+RM，资源管理器（数据库）
+
+TM，事务管理器，负责对事务进行协调、监控，并负责事务的提交和回滚
+
+#### XA规范
+
+定义了RM与TM交互的接口
+
+xa_open,xa_close 用于跟RM建立连接
+
+xa_start,xa_end 开始事务、结束事务
+
+xa_prepare,xa_commit,xa_rollback 预提交，提交，回滚
+
+Xa_recover 回滚预提交的事务
+
+#### JTA规范
+
+1. javax.transaction.Status: 定义了事务的状态,例如prepare, commit rollback等等等
+2. javax.transaction.Synchronization：同步
+3. javax.transaction.Transaction：事务
+4. javax.transaction.TransactionManager：事务管理器
+5. javax.transaction.UserTransaction：用于声明一个分布式事务
+6. javax.transaction.TransactionSynchronizationRegistry：事务同步注册
+7. javax.transaction.xa.XAResource：定义RM提供给TM操作的接口
+8. javax.transaction.xa.Xid：事务id
+
+#### 二阶段提交（2PC）
+
+最简单的分布式事务解决方案
+
+1. request commit 由协调者的RM询问事务是否可以提交
+
+2. commit/rollback 所有RM回复YES，提交，否则回滚
+
+问题：
+
+- 同步阻塞问题 所有参与节点都是事务阻塞型，占用资源。
+- 单点故障 协调者故障，所有参与者都会阻塞（重新选举后问题仍然存在）
+- 数据不一致 局部网络异常或回复过程中协调者故障，导致部分参与者事务提交，造成数据不一致
+
+#### 三阶段提交（3PC）
+
+1. cancommit阶段, 和2PC中的请求阶段类似 
+2. precommit阶段. 如果cancommit阶段不是全部响应YES或者有RM超时, 那么回滚整个事务.  否则, 发送precommit指令, 让各个RM执行事务操作,执行完后响应ACK. 
+3. docommit阶段.如果precommit阶段由RM没有响应ACK或者超时, 那么回滚整个事务. 否则发送docommit指令, 让各个RM真正提交事务.
+
+#### 柔性事务（TCC）
+
+不再追求强一致性，只要求最终一致性
+
+1. try阶段. 各个事务参与者检查业务一致性, 预留系统资源.例如锁定库存 
+2. comfirm阶段. 事务参与者使用try阶段预留的资源,执行业务操作. 
+3. cancel阶段. 如果try阶段任意一个事务参与者try失败, 则做cancel操作. cancel包括释放资源和反向补偿
+
+#### 消息队列
+
+利用消息队列，结合定时任务做重试和补偿实现柔性事务
