--- a/数据库/数据库复习.md
+++ b/数据库/数据库复习.md
@@ -228,9 +228,9 @@ Is null
 
 读未提交：另一事务修改了数据但未提交，本事务会读取到修改的数据（脏读）
 
-不可重复读（读已提交）
+不可重复读（读已提交）（幻读）
 
-可重复读：多次读取数据，都是该事务开始状态的数据（幻读）
+可重复读：多次读取数据，都是该事务开始状态的数据
 
 串行化：最高隔离级别，不会产生任何异常
 
