更新线程池

--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -388,9 +388,7 @@ Executor类图：
 
 ##### 实现原理
 
-维护corePoolSize与maxPoolSize。corePoolSize为线程池默认大小，即使无线程工作也会维持这个数量。每一个任务分配一个线程，当超
-
-过corePoolSize时，新任务进入阻塞队列。如果阻塞队列满了，新任务进入会创建新线程。当线程数量超过maxPoolSize，reject()处理该任务。
+维护corePoolSize与maxPoolSize。corePoolSize为线程池默认大小，即使无线程工作也会维持这个数量。每一个任务分配一个线程，当超过corePoolSize时，新任务进入阻塞队列。如果阻塞队列满了，新任务进入会创建新线程。当线程数量超过maxPoolSize，reject()处理该任务。
 
 FixedThreadPool：使用LinkedBlockingQuene作为阻塞队列，corePoolSize == maxPoolSize，特点时即使没有线程工作也会维护固定数量的线程。
 
@@ -453,6 +451,8 @@ private final AtomicInteger ctl = new AtomicInteger(ctlOf(RUNNING, 0));
 - **TIDYING** ： 2 << COUNT_BITS，即高 3 位为 010，该状态表示线程池对线程进行整理优化；
 - **TERMINATED**： 3 << COUNT_BITS，即高 3 位为 011，该状态表示线程池停止工作；
 
+![](img/31bad766983e212431077ca8da92762050214.png)
+
 ##### 创建线程池的方式：
 
 Executors.newSingleThreadExecutor();
@@ -463,7 +463,70 @@ Executors.newCachedThreadPool();
 
 Execotors.newSingleThreadScheduledExecutor();
 
-Executors.newScheduledThreadPool();
+Executors.newScheduledThreadPool()
+
+##### 缺陷
+
+```java
+public static ExecutorService newCachedThreadPool() {
+    return new ThreadPoolExecutor(0, Integer.MAX_VALUE,
+                                  60L, TimeUnit.SECONDS,
+                                  new SynchronousQueue<Runnable>());
+}
+```
+
+SynchronousQueue本身不存储元素，新进任务就阻塞等待消费。
+
+实现效果是，线程池都是用工作线程池外的线程执行任务，（即只使用maxPoolSize作为判断条件），直到到达最大线程数Integer.MAX_VALUE，之前OOM。
+
+cache：60L
+
+
+
+```java
+public static ScheduledExecutorService newScheduledThreadPool(int corePoolSize) {
+  return new ScheduledThreadPoolExecutor(corePoolSize);
+}
+public ScheduledThreadPoolExecutor( int corePoolSize) {
+  super(corePoolSize, Integer.MAX_VALUE, 0, NANOSECONDS,
+     new DelayedWorkQueue());
+}
+  public ThreadPoolExecutor(int corePoolSize,
+             int maximumPoolSize,
+             long keepAliveTime,
+             TimeUnit unit,
+             BlockingQueue workQueue) {
+  this(corePoolSize, maximumPoolSize, keepAliveTime, unit, workQueue,
+     Executors.defaultThreadFactory(), defaultHandler);
+}
+```
+
+同样，线程池都是用工作线程池外的线程执行任务，（即只使用maxPoolSize作为判断条件），直到到达最大线程数Integer.MAX_VALUE，之前OOM。
+
+
+
+```java
+public static ExecutorService newSingleThreadExecutor() {
+    return new FinalizableDelegatedExecutorService
+        (new ThreadPoolExecutor(1, 1,
+                                0L, TimeUnit.MILLISECONDS,
+                                new LinkedBlockingQueue<Runnable>()));
+}
+```
+
+相当于单线程执行，但LinkedBlockingQueue不设置size，导致都阻塞不拒绝OOM。
+
+
+
+```java
+public static ExecutorService newFixedThreadPool(int nThreads) {
+    return new ThreadPoolExecutor(nThreads, nThreads,
+                                  0L, TimeUnit.MILLISECONDS,
+                                  new LinkedBlockingQueue<Runnable>());
+}
+```
+
+同样，阻塞队列OOM。
 
 ### Lock实现原理
 
