--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -528,6 +528,50 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 同样，阻塞队列OOM。
 
+
+
+Eg.
+
+```java
+	public static void main(String[] args) {
+        Vector<Integer> list = new Vector<>();
+
+        ExecutorService executorService = Executors.newFixedThreadPool(10);
+        ThreadPoolExecutor executorService2 = new ThreadPoolExecutor(4, 11,
+                1000L, TimeUnit.MILLISECONDS,
+                new LinkedBlockingQueue<Runnable>());
+        executorService2.allowCoreThreadTimeOut(true);
+        List<Future<Boolean>> futures = new ArrayList<>();
+
+        for(int i=0;i<10;i++){
+            int a = i;
+            Future<Boolean> future = executorService2.submit(() ->{
+                System.out.println(a  + "执行");
+                list.add(a);
+                Thread.sleep(3000);
+                return true;
+            });
+            futures.add(future);
+        }
+
+        try {
+            for(Future<Boolean> future:futures){
+                if(!future.get()){
+                    System.out.println("报错");
+                }
+            }
+        } catch (Exception e) {
+            System.out.println("报错");
+            e.printStackTrace();
+        }
+
+        System.out.println(list);
+//        executorService.shutdown();
+    }
+```
+
+
+
 ### Lock实现原理
 
 在ReentrantLock的默认构造函数中，初始化了一个AQS
