--- a/数据库/数据库复习.md
+++ b/数据库/数据库复习.md
@@ -396,3 +396,121 @@ Xa_recover 回滚预提交的事务
 #### 消息队列
 
 利用消息队列，结合定时任务做重试和补偿实现柔性事务
+
+### 事务隔离机制
+
+在可重复读隔离级别，数据库在事务开始时会创建数据的视图（一致性视图），达到以下效果：在该事务期间，即使有其他事务修改了数据，该事务看到的仍和事务启动时的一样。而如果该事务想更新一条数据，刚好有其他事务拥有这行数据的锁，那么该事务会陷入锁等待，在等待结束后，该事务看到的数据是其他事务已经提交后的结果。
+
+例：
+
+表结构：
+
+```sql
+mysql> CREATE TABLE `t` (
+  `id` int(11) NOT NULL,
+  `k` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB;
+insert into t(id, k) values(1,1),(2,2);
+```
+
+
+
+| 事务1                                      | 事务2                                      | 事务3                             |
+| ------------------------------------------ | ------------------------------------------ | --------------------------------- |
+| start transaction with consistent snapshot |                                            |                                   |
+|                                            | start transaction with consistent snapshot |                                   |
+|                                            |                                            | update t set k = k+1 where id = 1 |
+|                                            | update t set k = k+1 where id = 1          |                                   |
+|                                            | select k from t where id = 1               |                                   |
+| select k from t where id = 1               |                                            |                                   |
+| commit;                                    |                                            |                                   |
+|                                            | commit;                                    |                                   |
+
+结果：事务1select的结果是k=1，事务2select的结果是k=3。
+
+#### 快照
+
+在可重复隔离级别下，事务开始时就创建了一个基于整库的数据快照，这个快照不是物理存储的，而是基于undo log日志实现。
+
+InnoDB的每个事务拥有一个事务ID，是在事务开始时申请，并严格按递增顺序。
+
+每条数据被更新后都会生成一个新的数据版本，并以事务ID作为标示。
+
+![68d08d277a6f7926a41cc5541d3dfced](img/68d08d277a6f7926a41cc5541d3dfced.png)
+
+比如需要V2版本的数据，需使用当前版本（V4）+undo log（U3，U2）计算。
+
+InnoDB为每一个事务构造一个数据，用来存储事务开始时正在活跃的事务（启动但未提交）。
+
+**数组**里面事务 ID 的最小值记为低水位，**当前系统**里面已经创建过的事务 ID 的最大值加 1 记为高水位。
+
+这个视图数组和高水位，就组成了当前事务的一致性视图（read-view）。
+
+![882114aaf55861832b4270d44507695e](img/882114aaf55861832b4270d44507695e.png)
+
+这样，对于当前事务的启动瞬间来说，一个数据版本的 row trx_id，有以下几种可能：
+
+如果落在绿色部分，表示这个版本是已提交的事务或者是当前事务自己生成的，这个数据是可见的；
+
+如果落在红色部分，表示这个版本是由将来启动的事务生成的，是肯定不可见的；
+
+如果落在黄色部分，那就包括两种情况
+
+​	a. 若 row trx_id 在数组中，表示这个版本是由还没提交的事务生成的，不可见；
+
+​	b. 若 row trx_id 不在数组中，表示这个版本是已经提交了的事务生成的，可见。
+
+假设：
+
+事务 A 开始前，系统里面只有一个活跃事务 ID 是 99；
+
+事务 A、B、C 的版本号分别是 100、101、102，且当前系统里只有这四个事务；
+
+三个事务开始前，(1,1）这一行数据的 row trx_id 是 90。这样，事务 A 的视图数组就是[99,100], 事务 B 的视图数组是[99,100,101], 事务 C 的视图数组是[99,100,101,102]。
+
+![9416c310e406519b7460437cb0c5c149](img/9416c310e406519b7460437cb0c5c149.png)
+
+事务 A 查询语句的读数据流程是这样的：
+
+找到 (1,3) 的时候，判断出 row trx_id=101，比高水位大，处于红色区域，不可见；
+
+接着，找到上一个历史版本，一看 row trx_id=102，比高水位大，处于红色区域，不可见；
+
+再往前找，终于找到了（1,1)，它的 row trx_id=90，比低水位小，处于绿色区域，可见。
+
+
+
+更新数据都是先读后写，而读是基于当前的数据版本，称为当前读。
+
+select语句如果加锁也使用当前读。
+
+而如果事务3在事务2之后提交，适用两阶段锁协议，如果当前行上有事务还未提交，则当前事务必须等待锁。
+
+
+
+读提交与可重复读的不同是，在事务开始时创建一致性视图，之后事务里其他查询都用这个视图。
+
+而读提交是每条语句执行前都创建一个新的视图。即每次执行语句时都计算视图数组。
+
+### 排序
+
+#### 全字段排序
+
+MySQL为每一个线程分配一块内存用于排序，称为sort_buffer。
+
+select city,name,age from t where city='杭州' order by name limit 1000  ;
+
+1.根据索引条件找到主键ID
+
+2.到主键索引找到整行
+
+3.将目标字段放入sort_buffer
+
+4.对name进行排序后返回
+
+如果需要排序的数据量太大，需要使用磁盘临时文件作为辅助。
+
+#### rowid 排序
+
+如果MySQL认为单行的数据量太大（max_length_for_sort_data参数），则只将主键id与name放入sort_buffer，排序后再根据主键查询其余字段。
