--- a/数据库/数据库复习.md
+++ b/数据库/数据库复习.md
@@ -514,3 +514,22 @@ select city,name,age from t where city='杭州' order by name limit 1000  ;
 #### rowid 排序
 
 如果MySQL认为单行的数据量太大（max_length_for_sort_data参数），则只将主键id与name放入sort_buffer，排序后再根据主键查询其余字段。
+
+### 脏页
+
+InnoDB用缓冲池（buffer pool）管理内存，缓冲池中的内存页有三种状态：
+
+1. 还没有使用的；
+2. 使用了并且是干净页；
+3. 使用了并且是脏页。
+
+InnoDB的策略是尽量使用内存，因此对于一个长时间运行的库来说，未被使用的页面很少。
+
+**当要读入的数据页没有在内存的时候，就必须到缓冲池中申请一个数据页**。这时候只能把最久不使用的数据页从内存中淘汰掉：如果要淘汰的是一个干净页，就直接释放出来复用；但如果是脏页呢，就必须将脏页先刷到磁盘，变成干净页后才能复用
+
+#### 刷脏页时机
+
+- redo log写满，此时写入性能为0
+- 内存不足，需淘汰数据页（脏页与干净页）
+- MySQL空闲
+- MySQL正常关闭
