--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -528,7 +528,10 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 同样，阻塞队列OOM。
 
-
+```java
+        //corePoolSize=maxPoolSize不开工作线程，只使用核心线程与阻塞队列配合，溢出则丢弃
+        return new ThreadPoolExecutor(16, 16, 0, TimeUnit.MINUTES, new LinkedBlockingQueue<>(20),new ThreadPoolExecutor.DiscardPolicy());
+```
 
 ##### Eg.
 
