--- a/并发编程/阻塞队列.md
+++ b/并发编程/阻塞队列.md
@@ -139,3 +139,155 @@ public void put(E e) throws InterruptedException {
 
 c = count.getAndIncrement();使用cas乐观锁来解决取放锁下两个线程的操作并发问题
 
+# 手写阻塞队列
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.ReentrantLock;
+
+/**
+ * @author 史云龙
+ * @version 1.0
+ * @title
+ * @description
+ * @mobile 15232321081
+ * @created 2020/9/22 4:22 PM
+ * @changeRecord
+ */
+public class SimpleArrayBlockQueue<T> {
+    private List<T> container;
+
+    private AtomicInteger count = new AtomicInteger(0);
+    private final Integer capacity;
+
+    //使用同一个可重入锁的不同条件，保证一个线程
+    private ReentrantLock lock = new ReentrantLock();
+    private Condition notNull = lock.newCondition();
+    private Condition notFull = lock.newCondition();
+
+    public SimpleArrayBlockQueue(int capacity) {
+        this.capacity = capacity;
+        container = new ArrayList<>(capacity);
+    }
+
+    public void offer(T t) throws InterruptedException {
+
+        lock.lockInterruptibly();
+        try {
+            while(count.get() >= capacity){//使用while，当农田Full被通知后，该线程开始抢锁，但如果中间又有一个entity被写入，此时仍
+                notFull.await();
+            }
+            container.add(t);
+            count.getAndIncrement();
+            notNull.signal();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    public T take() throws InterruptedException {
+        lock.lockInterruptibly();
+        try {
+            while(count.get() <= 0){
+                notNull.await();
+            }
+            T t = container.remove(0);
+            count.getAndDecrement();
+            notFull.signal();
+            return t;
+        } finally {
+            lock.unlock();
+        }
+    }
+
+}
+```
+
+```java
+import java.util.LinkedList;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.ReentrantLock;
+
+/**
+ * @author 史云龙
+ * @version 1.0
+ * @title
+ * @description
+ * @mobile 15232321081
+ * @created 2020/9/22 4:17 PM
+ * @changeRecord
+ */
+public class SimpleLinkedBlockQueue<T> {
+    private List<T> container = new LinkedList<>();
+
+    private AtomicInteger count = new AtomicInteger(0);
+    private final Integer capacity;
+
+    private ReentrantLock takeLock = new ReentrantLock();
+    private Condition notNull = takeLock.newCondition();
+    private ReentrantLock putLock = new ReentrantLock();
+    private Condition notFull = putLock.newCondition();
+
+    public SimpleLinkedBlockQueue(int capacity) {
+        this.capacity = capacity;
+    }
+
+    public void offer(T t) throws InterruptedException {
+
+        putLock.lockInterruptibly();
+        try {
+            while(count.get() >= capacity){
+                notFull.await();
+            }
+            container.add(t);
+            count.getAndIncrement();
+        } finally {
+            putLock.unlock();
+        }
+        singleNotNull();
+    }
+
+    private void singleNotNull() {
+        takeLock.lock();
+        try {
+            notNull.signal();
+        } finally {
+            takeLock.unlock();
+        }
+
+    }
+
+    public T take() throws InterruptedException {
+        T t = null;
+        takeLock.lockInterruptibly();
+        try {
+            while(count.get() <= 0){
+                notNull.await();
+            }
+            t = container.remove(0);
+            count.getAndDecrement();
+        } finally {
+            takeLock.unlock();
+        }
+
+        singleNotFull();
+        return t;
+    }
+
+    private void singleNotFull() {
+        putLock.lock();
+        try{
+            notFull.signal();
+        } finally {
+            putLock.unlock();
+        }
+    }
+
+}
+```
+
