--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -165,3 +165,16 @@ IP协议 为了计算机网络之间互联的协议。
 相当于TCP建立建立连接二次握手。攻击者伪造大量不存在ip，向服务器发送SYN包，服务器发送确认后等待确认，不断超时重发，造成大量未连接队列，导致系统缓慢，引起网路堵塞。
 
 ### Session和Cookie
+
+### HTTPS
+
+![2021-03-31 上午10.08.51](./img/2021-03-31 上午10.08.51.png)
+
+1. Server端持有一对公钥密钥
+2. Server将公钥使用CA签名，发给Client端
+3. Client接到PUB(CA)后去CA验证PUB的有效性。（泄漏也没有关系，只要保证PUB不被篡改就可以了）
+4. Client持有PUB
+5. Client随机生成传输盐RDM_S（对称加密）
+6. Client将RDM_S使用Server的PUB加密传输给Server
+7. Server将RDM_S(PUB)使用密钥解密，这样Server和Client都持有了相同的RDM_S。
+8. 接下来的相互传输都适用RDM_S加密。
