--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -31,6 +31,14 @@ Java中的Thread.sleep(1)
 
 死亡：run正常终止或出现异常退出
 
+### 线程停止
+
+编码停止：run正常执行结束，抛异常，状态量
+
+强制停止：thread.stop
+
+中断标志：interrupt（看情况）
+
 ### 实现多线程的方式
 
 - 实现Callable接口
@@ -459,6 +467,16 @@ service.shutDownNow();
 3. 任务接口（Task）：每个任务必须实现的接口，以供工作线程调度任务的执行，它主要规定了任务的入口，任务执行完后的收尾工作，任务的执行状态等； 
 4. 任务队列（taskQueue）：用于存放没有处理的任务。提供一种缓冲机制。
 
+##### 拒绝策略
+
+AbortPolicy：抛异常
+
+CallerRunsPolicy：由调用线程执行
+
+DiscardPolicy：直接抛弃
+
+DiscardOldestPolicy：抛弃最旧的
+
 ##### execute()和submit()
 
 1. execute提交的是Runnable类型的任务，而submit提交的是Callable或者Runnable类型的任务
@@ -538,14 +556,6 @@ public static ScheduledExecutorService newScheduledThreadPool(int corePoolSize) 
 public ScheduledThreadPoolExecutor( int corePoolSize) {
   super(corePoolSize, Integer.MAX_VALUE, 0, NANOSECONDS,
      new DelayedWorkQueue());
-}
-  public ThreadPoolExecutor(int corePoolSize,
-             int maximumPoolSize,
-             long keepAliveTime,
-             TimeUnit unit,
-             BlockingQueue workQueue) {
-  this(corePoolSize, maximumPoolSize, keepAliveTime, unit, workQueue,
-     Executors.defaultThreadFactory(), defaultHandler);
 }
 ```
 
@@ -633,13 +643,12 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 ##### 宏观实现
 
-1. 先在JDK6 以前，synchronized 那时还属于重量级锁，相当于关二爷手中的青龙偃月刀，每次加锁都依赖操作系统Mutex Lock实现，涉及到操作系统让线程从用户态切换到内核态，切换成本很高；
+1. 先在JDK6 以前，synchronized 那时还属于重量级锁，每次加锁都依赖操作系统Mutex Lock实现，涉及到操作系统让线程从用户态切换到内核态，切换成本很高；
 2. 到了JDK6，研究人员引入了偏向锁和轻量级锁，因为Sun 程序员发现大部分程序大多数时间都不会发生多个线程同时访问竞态资源的情况，每次线程都加锁解锁，每次这么搞都要操作系统在用户态和内核态之前来回切，太耗性能了。
 
-<请查看对象内存布局.md>
+<请查看 对象内存布局.md>
 
 ```C++
-//👇图详细介绍重要变量的作用
 ObjectMonitor() {
     _header       = NULL;
     _count        = 0;   // 重入次数
@@ -1013,45 +1022,90 @@ public class Singleton {
 
 23步骤互换，导致另一个线程在指向引用后单例！=null，但还未初始化，得到的是不完整的对象。
 
-### ConcurrentHashMap
+### 协程
 
-HashTable实现同步的机制是将get/set方法都synchronized，效率低下。
+协程运行在线程之上，当一个协程执行完成后，可以选择主动让出，让另一个协程运行在当前线程之上。**协程并没有增加线程数量，只是在线程的基础之上通过分时复用的方式运行多个协程**，而且协程的切换在用户态完成，切换的代价比线程从用户态到内核态的代价小很多。
 
-ConcurrentHashMap采取分段锁的机制。
+实际上协程并不是什么银弹，协程只有在等待IO的过程中才能重复利用线程，上面我们已经讲过了，线程在等待IO的过程中会陷入阻塞状态，意识到问题没有？
 
-##### 存储结构
+假设协程运行在线程之上，并且协程调用了一个阻塞IO操作，这时候会发生什么？实际上操作系统并不知道协程的存在，它只知道线程，**因此在协程调用阻塞IO操作的时候，操作系统会让线程进入阻塞状态，当前的协程和其它绑定在该线程之上的协程都会陷入阻塞而得不到调度，这往往是不能接受的。**
 
-ConcurrentHashMap的主干是Segment[]，
+因此在协程中不能调用导致线程阻塞的操作。也就是说，协程只有和异步IO结合起来，才能发挥最大的威力。
+
+而对于计算密集型任务，多线程本身就不能提供更多的性能，所以协程的作用也十分有限。
+
+### 进程间通信
+
+管道pipe：管道是一种半双工的通信方式，数据只能单向流动，而且只能在具有亲缘关系的进程间使用。进程的亲缘关系通常是指父子进程关系。
+
+命名管道FIFO：有名管道也是半双工的通信方式，但是它允许无亲缘关系进程间的通信。
+
+消息队列MessageQueue：消息队列是由消息的链表，存放在内核中并由消息队列标识符标识。消息队列克服了信号传递信息少、管道只能承载无格式字节流以及缓冲区大小受限等缺点。
+
+共享存储SharedMemory：共享内存就是映射一段能被其他进程所访问的内存，这段共享内存由一个进程创建，但多个进程都可以访问。共享内存是最快的 IPC 方式，它是针对其他进程间通信方式运行效率低而专门设计的。它往往与其他通信机制，如信号量，配合使用，来实现进程间的同步和通信。
+
+信号量Semaphore：信号量是一个计数器，可以用来控制多个进程对共享资源的访问。它常作为一种锁机制，防止某进程正在访问共享资源时，其他进程也访问该资源。因此，主要作为进程间以及同一进程内不同线程之间的同步手段。
+
+套接字Socket：套解口也是一种进程间通信机制，与其他通信机制不同的是，它可用于不同及其间的进程通信。
+
+信号 ( sinal ) ： 信号是一种比较复杂的通信方式，用于通知接收进程某个事件已经发生。
+
+https://blog.csdn.net/zhaohong_bo/article/details/89552188
+
+### ThreadLocal
+
+##### 原理
+
+每一个**Thread**内部维护了一个map，类型为**ThreadLocal**的静态内部类ThreadLocalMap。
 
 ```java
-final Segment<K,V>[] segments;
+public T get() {
+  Thread t = Thread.currentThread();
+  ThreadLocalMap map = getMap(t);
+  if (map != null) {
+    ThreadLocalMap.Entry e = map.getEntry(this);
+    if (e != null) {
+      @SuppressWarnings("unchecked")
+      T result = (T)e.value;
+      return result;
+    }
+  }
+  return setInitialValue();
+}
+ThreadLocalMap getMap(Thread t) {
+  return t.threadLocals;
+}
 ```
 
-Segment继承自ReentrantLock，每个Segment都是一把锁，Segment维护各自的HashEntry键值对数组，对于同一个Segment里的数据进行操作才需要考虑同步。
+最终的变量是放在了**当前线程**的 `ThreadLocalMap` 中，并不是存在 ThreadLocal 上，ThreadLocal 可以理解为只是ThreadLocalMap的封装，传递了变量值。
 
-```java
-transient volatile HashEntry<K,V>[] table;
+大概是这样的：
+
+```伪
+Thread1{
+	ThreadLocalMap<ThreadLocal<T>,T> threadLocalMapT1:{
+		threadLocal1<Integer> :1
+		threadLocals<String> : "str"
+	}
+}
+
+ThreadLocal<Integer> threadLocal1;
+Thread1 main{
+ threadLocal1.set(2);//结果：threadLocal1<Integer> :2
+ threadLocal1.get()//this.Thread.threadLocalMapT1.get(threadLocal1)
+}
 ```
 
-默认的并发级别**ConcurrentLevel**是16，也就是默认有16个Segment，最多支持16个线程同时访问。
 
-##### size操作
 
-每个Segment维护一个count变量，在进行size操作时遍历所有Segment的count累加。
+##### 内存泄漏问题
 
-先尝试不加锁，如果两次得到的结果相同，那么就认为这个结果是正确的，否则进行加锁操作。尝试次数可设定。
+ThreadLocalMap：
 
-##### 同步方式
+key为当前ThreadLocal类型的弱引用，每次垃圾回收如果无其他强引用就会被回收。
 
-对于读操作，获取key所在的Segment时，采用unsafe的volatile方法。
+value为强引用。
 
-```java
-Segment<K,V> s = (Segment<K,V>)UNSAFE.getObjectVolatile(segments, u);
-```
+这样一来就会出现 key 为 null 的 value。
 
-获取Segment的HashEntry也同理。
-
-对于写操作，先获取key所在的Segment，如果获取成功，则像操作普通HashMap一样操作Segment。
-
-获取锁的方式并不是直接用lock，因为这种方式在获取不到的时候会挂起。采用的方式是自旋锁，如果获取失败，则循环再次尝试tryLock申请锁，retry超过一定数值时再用lock。如果自旋的过程中key对应的链表头被修改，则重置retry次数。（消耗cpu）
-
+ThreadLocalMap实现中已经考虑了这种情况，在调用 set()、get()、remove() 方法的时候，会清理掉 key 为 null 的记录。如果说会出现内存泄漏，那只有在出现了 key 为 null 的记录后，没有手动调用 remove() 方法，并且之后也不再调用 get()、set()、remove() 方法的情况下。
