--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -1056,7 +1056,7 @@ https://blog.csdn.net/zhaohong_bo/article/details/89552188
 
 ##### 原理
 
-每一个**Thread**内部维护了一个map，类型为**ThreadLocal**的静态内部类ThreadLocalMap。
+每一个**Thread**内部维护了一个map，类型为**ThreadLocal**的静态内部类ThreadLocalMap，key为ThreadLocal，value为value。
 
 ```java
 public T get() {
@@ -1079,6 +1079,10 @@ ThreadLocalMap getMap(Thread t) {
 
 最终的变量是放在了**当前线程**的 `ThreadLocalMap` 中，并不是存在 ThreadLocal 上，ThreadLocal 可以理解为只是ThreadLocalMap的封装，传递了变量值。
 
+##### ThreadLocalMap
+
+Entry[] 使用开放定址法解决hash冲突（如果位置i已经存在元素，那么继续向i+1寻找空位。也造成查询的时候如果位置i不是该key，还需要继续向数组后面搜索）
+
 大概是这样的：
 
 ```伪
@@ -1096,8 +1100,6 @@ Thread1 main{
 }
 ```
 
-
-
 ##### 内存泄漏问题
 
 ThreadLocalMap：
@@ -1109,3 +1111,6 @@ value为强引用。
 这样一来就会出现 key 为 null 的 value。
 
 ThreadLocalMap实现中已经考虑了这种情况，在调用 set()、get()、remove() 方法的时候，会清理掉 key 为 null 的记录。如果说会出现内存泄漏，那只有在出现了 key 为 null 的记录后，没有手动调用 remove() 方法，并且之后也不再调用 get()、set()、remove() 方法的情况下。
+
+ThreadLocal的设计者考虑到线程往往生命周期很长，比如经常会用到线程池，线程一直存活着，根据JVM **根搜索算法**，一直存在 Thread -> ThreadLocalMap -> Entry（元素）这样一条引用链路, 如下图，如果key不设计成WeakReference类型，是强引用的话，就一直不会被GC回收，key就一直不会是null，不为null Entry元素就不会被清理（ThreadLocalMap是根据key是否为null来判断是否清理Entry），达到的效果就是只要ThreadLocal 所在的作用域结束了工作被清理了，GC回收的时候就会把key引用对象回收，key置为null，ThreadLocal会尽力保证Entry清理掉来最大可能避免内存泄漏。
+
