--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -22,9 +22,11 @@
 
 TCP的首部：
 
+每行32位
+
 ![](img/tcphead.png)
 
-固定的20位，余下选项不固定。
+前五行固定的20字节，余下选项不固定。
 
 TCP流量控制通过连接的每一端声明窗口大小进行控制（接收缓冲区大小）,窗口大小以2字节表示，故窗口最大为65535字节。
 
