--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -993,9 +993,17 @@ JDK1.6引入轻量级锁，让锁拥有四个状态，无锁unlocked、偏向锁
 
 当其他线程尝试获取锁时，偏向状态失效，恢复到未锁定状态或轻量级锁状态。
 
+### AtomicInteger
+
+使用unsafe的cas与自旋实现
+
 ### UnSafe类
 
 上述compareAndSetState等CAS操作全部是基于unsafe的本地CAS方法。
+
+由硬件保证原子性，平台相关。
+
+unsafe类不是提供给用户程序调用的类（Unsafe.getUnsafe()的代码里限制了只有启动类加载器(bootstrap classloader)加载的Class才能访问它）。因此如果不采用反射手段，只能通过其他的JavaAPI来间接使用它，如J.U.C里面的整数原子类，其中compareAndSet()和getAndIncrement()等方法都使用了Unsafe类的CAS操作。
 
 ### *单例模式双重校验锁为什么要加volatile
 
@@ -1114,3 +1122,6 @@ ThreadLocalMap实现中已经考虑了这种情况，在调用 set()、get()、r
 
 ThreadLocal的设计者考虑到线程往往生命周期很长，比如经常会用到线程池，线程一直存活着，根据JVM **根搜索算法**，一直存在 Thread -> ThreadLocalMap -> Entry（元素）这样一条引用链路, 如下图，如果key不设计成WeakReference类型，是强引用的话，就一直不会被GC回收，key就一直不会是null，不为null Entry元素就不会被清理（ThreadLocalMap是根据key是否为null来判断是否清理Entry），达到的效果就是只要ThreadLocal 所在的作用域结束了工作被清理了，GC回收的时候就会把key引用对象回收，key置为null，ThreadLocal会尽力保证Entry清理掉来最大可能避免内存泄漏。
 
+
+
+《深入理解Java虚拟机》
