--- a/并发编程/并发编程.md
+++ b/并发编程/并发编程.md
@@ -2,7 +2,7 @@
 
 ### 线程状态转换
 
-![](img/线程状态.png)
+![](./img/线程状态.png)
 
 ##### New
 
@@ -440,7 +440,7 @@ public static void main(String[] args) {
 
 Executor类图：
 
-![](img/Executor类图.png)
+![](./img/Executor类图.png)
 
 ##### 实现原理
 
@@ -517,7 +517,7 @@ private final AtomicInteger ctl = new AtomicInteger(ctlOf(RUNNING, 0));
 - **TIDYING** ： 2 << COUNT_BITS，即高 3 位为 010，该状态表示线程池对线程进行整理优化；
 - **TERMINATED**： 3 << COUNT_BITS，即高 3 位为 011，该状态表示线程池停止工作；
 
-![](img/31bad766983e212431077ca8da92762050214.png)
+![](./img/31bad766983e212431077ca8da92762050214.png)
 
 ##### 创建线程池的方式：
 
@@ -639,7 +639,7 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 （见Java对象内存布局.md）
 
-![](img/QQ截图20190915230356.png)
+![](./img/QQ截图20190915230356.png)
 
 ##### 宏观实现
 
