--- a/数据库/分布式事务.md
+++ b/数据库/分布式事务.md
@@ -117,7 +117,7 @@ BASE解决了CAP中理论没有网络延迟，在BASE中用软状态和最终一
 #### 3PC
 
 1. cancommit阶段, 和2PC中的请求阶段类似 
-2. precommit阶段. 如果cancommit阶段不是全部响应YES或者有RM超时, 那么回滚整个事务.  否则, 发送precommit指令, 让各个RM执行事务操作,执行完后响应ACK. 
+2. precommit阶段. 如果cancommit阶段不是全部响应YES或者有RM超时, 那么回滚整个事务.  否则, 发送precommit指令, 让各个RM执行事务操作,**执行完**后响应ACK. 
 3. docommit阶段.如果precommit阶段由RM没有响应ACK或者超时, 那么回滚整个事务. 否则发送docommit指令, 让各个RM真正提交事务.
 
 #### TCC
