--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -184,3 +184,17 @@ IP协议 为了计算机网络之间互联的协议。
 6. Client将RDM_S使用Server的PUB加密传输给Server
 7. Server将RDM_S(PUB)使用密钥解密，这样Server和Client都持有了相同的RDM_S。
 8. 接下来的相互传输都适用RDM_S加密。
+
+#### CA的作用
+
+在交互之前客户端会下载服务器的SSL证书，其中包含了
+
+- 发布机构CA
+- 证书有效期
+- 公钥
+- 证书持有者
+- 签名
+
+##### SSL证书验证过程
+
+客户端接收到SSL证书后，开始对证书进行校验，查找证书写明的CA机构在**本地**是否已被信任，如果未被信任浏览器会报错。如果已被信任，取出本地存储的**CA公钥**，对服务器SSL证书签名进行解密（CA私钥加密，公钥解密），得到**真实指纹**和**指纹算法**，再根据这个**指纹算法**对服务器证书的摘要进行计算得到**指纹**，对比该**指纹**与**真实指纹**。对比成功后代表SSL证书里的服务器公钥是合法的。
