--- a/面试/其他.md
+++ b/面试/其他.md
@@ -131,3 +131,19 @@ public class Main {
 String堆的内存地址
 
 继承抛方法
+
+##### 进程间通信方式
+
+管道：只能单向传递，且只能在有亲缘关系的进程中使用
+
+有名管道：也是单向传递，但可以在非亲缘进程中使用 
+
+信号量：可以用来控制多个进程对共享资源的访问
+
+消息队列：消息队列克服了信号传递信息少、管道只能承载无格式字节流以及缓冲区大小受限等缺点；
+
+信号：信号是一种比较复杂的通信方式，用于通知接收进程某个事件已经发生。
+
+共享内存：由一个进程创建，但多个进程都可以访问。往往与其他通信机制，如信号量，配合使用，来实现进程间的同步和通信。
+
+套接字：套解口也是一种进程间通信机制，与其他通信机制不同的是，它可用于不同及其间的进程通信。
